--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
                     <div class="nav__phone">(8452) 74-81-80</div>
                     <a class="button__header popup-open" href="">Обратный звонок</a>
 
-                    <div class="popup-fade">
-                        <div class="popup">
-                            <a class="popup-close" href="#">Закрыть</a>
-                            <form action="">
-                                <h3>Запишитесь на замер</h3>
-                                <input required placeholder="Ваше имя" type="text">
-                                <input required placeholder="Ваш телефон" type="tel">
-                                <input required placeholder="Ваш email" type="email">
-                                <textarea required placeholder="Ваше сообщение" name="Ваше сообщение" id="" cols="30"
-                                    rows="10"></textarea>
-                                <button>Отправить заявку</button>
-                            </form>
-                        </div>
-                    </div>
                 </nav>
             </header>
             <div class="main__header">
@@ -112,8 +98,8 @@
                 <p>Компания производит монтаж потолков разной фактуры и любой
                     сложности.С разнообразием натяжных потолков, их отличиями и
                     преимуществами можете ознакомиться здесь. </p>
+                <a target="blank" class="button__about" href="http://okna-plast-64.ru/">здесь</a>
 
-                <button class="button__about">здесь</button>
             </div>
             <img src="img/about__home.png" alt="home">
         </div>
@@ -412,6 +398,20 @@
             <footer>
                 <p> © 2020. Все права защищены.</p>
             </footer>
+        </div>
+    </div>
+    <div class="popup-fade">
+        <div class="popup">
+            <a class="popup-close" href="#">Закрыть</a>
+            <form action="">
+                <h3>Запишитесь на замер</h3>
+                <input required placeholder="Ваше имя" type="text">
+                <input required placeholder="Ваш телефон" type="tel">
+                <input required placeholder="Ваш email" type="email">
+                <textarea required placeholder="Ваше сообщение" name="Ваше сообщение" id="" cols="30"
+                    rows="10"></textarea>
+                <button>Отправить заявку</button>
+            </form>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
