--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <h3>Запишитесь на замер</h3>
                     <input required placeholder="Ваше имя" type="text">
                     <input required placeholder="Ваш телефон" type="tel">
-                    <input required placeholder="Ваш email" type="email">
+                    <input placeholder="Ваш email" type="email">
                     <textarea required placeholder="Ваше сообщение" name="Ваше сообщение" id="" cols="30"
                         rows="10"></textarea>
                     <button>Отправить заявку</button>
@@ -407,7 +407,7 @@
                 <h3>Запишитесь на замер</h3>
                 <input required placeholder="Ваше имя" type="text">
                 <input required placeholder="Ваш телефон" type="tel">
-                <input required placeholder="Ваш email" type="email">
+                <input placeholder="Ваш email" type="email">
                 <textarea required placeholder="Ваше сообщение" name="Ваше сообщение" id="" cols="30"
                     rows="10"></textarea>
                 <button>Отправить заявку</button>
