--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p>Компания производит монтаж потолков разной фактуры и любой
                     сложности.С разнообразием натяжных потолков, их отличиями и
                     преимуществами можете ознакомиться здесь. </p>
-                <a target="blank" class="button__about" href="http://okna-plast-64.ru/">здесь</a>
+                <a target="blank" class="button__about" href="http://oknaplast64.ru/catalog/okna/">здесь</a>
 
             </div>
             <img src="img/about__home.png" alt="home">
@@ -193,7 +193,7 @@
                         <img src="img/cost1.png" alt="cost">
                         <p>Матовое полотно/лаковое
                             или сатиновое</p>
-                        <h3>1130₽/1290₽</h3>
+                        <h3>4690₽/6060₽</h3>
                     </li>
                     <li>
                         <h4>Кухня 8м2</h4>
@@ -207,7 +207,7 @@
                         <img src="img/cost3.png" alt="cost">
                         <p>Матовое полотно/лаковое
                             или сатиновое</p>
-                        <h3>4690₽/6060₽</h3>
+                        <h3>1130₽/1290₽</h3>
                     </li>
                 </ul>
                 <a target="blank" href="http://oknaplast64.ru/price/potolok/">калькулятор стоимости</a>
